catkin_ws/logs/px4_offboard/build.make.023.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘void tagCallback(geometry_msgs::PoseArray)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:51:25: error: ‘const value_type’ has no member named ‘pose’
   if (tag_pose.poses[0].pose.x > 0.1)
                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:52:46: error: ‘const value_type’ has no member named ‘pose’
     g_command.position.x = tag_pose.poses[0].pose.x;
                                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:53:30: error: ‘const value_type’ has no member named ‘pose’
   else if (tag_pose.poses[0].pose.x < -0.1)
                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:54:47: error: ‘const value_type’ has no member named ‘pose’
     g_command.position.x = -tag_pose.poses[0].pose.x;
                                               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:56:25: error: ‘const value_type’ has no member named ‘pose’
   if (tag_pose.poses[0].pose.y > 0.1)
                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:57:46: error: ‘const value_type’ has no member named ‘pose’
     g_command.position.z = tag_pose.poses[0].pose.y;
                                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:58:30: error: ‘const value_type’ has no member named ‘pose’
   else if (tag_pose.poses[0].pose.y < -0.1)
                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:59:47: error: ‘const value_type’ has no member named ‘pose’
     g_command.position.z = -tag_pose.poses[0].pose.y;
                                               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:61:25: error: ‘const value_type’ has no member named ‘pose’
   if (tag_pose.poses[0].pose.z > 0.5)
                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:62:46: error: ‘const value_type’ has no member named ‘pose’
     g_command.position.y = tag_pose.poses[0].pose.z - 0.5;
                                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:63:30: error: ‘const value_type’ has no member named ‘pose’
   else if (tag_pose.poses[0].pose.z < -0.5)
                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:64:47: error: ‘const value_type’ has no member named ‘pose’
     g_command.position.y = -tag_pose.poses[0].pose.z + 0.5;
                                               ^
make[2]: *** [CMakeFiles/apriltag.dir/src/apriltag.cpp.o] Error 1
make[1]: *** [CMakeFiles/apriltag.dir/all] Error 2
make: *** [all] Error 2
